Abstract CNN Model

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 .DS_Store
 *.pdf
-/code/data
-/code/cifar-10
-/code/__pycache__
+/src/data
+/src/cifar-10
+/src/__pycache__
 *.idea
-/code/output.csv
+/src/output.csv
 remote_run.sh
-/code/output
-/code/tmp
+/src/output
+/src/tmp
 *.log
 /output_raw
 *.zip
 .vscode
 /output
+*__pycache__*
